test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/sub_double_from_ptr.plx
pub fn main(none) i32 {
    y: *i32 = 0
    #  you can't subtract a double from a pointer
    return (y - 0.0 == 0.0)
}
